# TelemetryHelper

./: LICENSE  Readme.md  pyproject.toml  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
example/: data.txt  data_updated.jsonl  data_updated.txt  data_updated_multitable.csv
example/METER1/: data_updated_singletable.csv
example/MULTIMETER/2026-04-18/: Readme.md  state_audit
src/telhelp_auxspace/: __init__.py  audit.py  data_format.py  main.py  parser.py  plot.py  tsupdater.py
